@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.5 2011/09/10 15:47:20 sborrill Exp $
+$NetBSD: distinfo,v 1.6 2011/12/02 08:46:18 sborrill Exp $
 
-SHA1 (istgt-20111008.tar.gz) = aa7bc47365763bddf82b4fcdffd659b2cb38a77c
-RMD160 (istgt-20111008.tar.gz) = 53600cff38ae715edee533914eb5b91a6df8846e
-Size (istgt-20111008.tar.gz) = 235227 bytes
+SHA1 (istgt-20120726.tar.gz) = 3eb4d4f38897521e0ca9a58c46d0a2c8725c695f
+RMD160 (istgt-20120726.tar.gz) = b8dfb211198130d2e922c5812ac1a26b7935f3fd
+Size (istgt-20120726.tar.gz) = 263653 bytes
