@@ -1,6 +1,6 @@
 #!@RCD_SCRIPTS_SHELL@
 #
-# $NetBSD$
+# $NetBSD: istgt.sh,v 1.1.1.1 2010/02/02 16:09:51 sborrill Exp $
 #
 
 # PROVIDE: istgt
@@ -13,6 +13,7 @@ rcvar=$name
 command="@PREFIX@/bin/${name}"
 pidfile="/var/run/${name}.pid"
 required_files="@PKG_SYSCONFDIR@/istgt.conf"
+extra_commands="reload"
 
 load_rc_config $name
 run_rc_command "$1"
