@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.2386 2012/07/26 21:09:43 asau Exp $
+$NetBSD: CHANGES-2012,v 1.2388 2012/07/27 12:46:38 wen Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -3685,3 +3685,5 @@ Changes to the packages collection and infrastructure in 2012:
 	Updated lang/ecl to 12.7.1 [asau 2012-07-26]
 	Updated sysutils/dc-tools to 1.2 [abs 2012-07-26]
 	Updated sysutils/dc-tools to 1.3 [abs 2012-07-26]
+	Updated www/moodle to 2.1.7 [wen 2012-07-26]
+	Updated net/istgt to 20120726 [sborrill 2012-07-27]
